# xmu-agv-robot

./: README.md
LMS1xx-master/: CMakeLists.txt
LMS1xx-master/launch/: LMS1xx.launch  LMS1xx.launch~  lms1xx.rviz
draw_trajectory/: CMakeLists.txt  data_odom_trajectory.txt  data_scan_trajectory.txt  draw_2d.py  package.xml  save_data.cpp
icp_bnb/: CMakeLists.txt  v_model.txt
icp_bnb/include/: icp.h  icp_define.h  one_means.h
icp_bnb/src/: icp.cpp  one_means.cpp
icp_bnb/test/: icp_odometry.cpp
navigation/global_planner/: CMakeLists.txt
navigation/global_planner/src/: Compare.cpp  State.cpp  dijkstra.cpp  hybrid_astar.cpp  plan_node.cpp  planner_core.cpp
navigation/move_base/src/: move_base.cpp
navigation/navfn/src/: navfn_node.cpp
roborts_base/: CMakeLists.txt  roborts_base.launch  roborts_base_config.h  roborts_base_node.cpp
roborts_base/chassis/: chassis.cpp  chassis.h
roborts_base/config/: roborts_base_parameter.yaml
roborts_base/gimbal/: gimbal.cpp  gimbal.h
roborts_base/roborts_sdk/dispatch/: dispatch.h  handle.cpp  handle.h
roborts_base/roborts_sdk/hardware/: serial_device.cpp
roborts_base/roborts_sdk/protocol/: protocol.cpp  protocol.h  protocol_define.h
roborts_base/roborts_sdk/test/: sdk_test.cpp
roborts_base/roborts_sdk/utilities/: crc.h
robot_tcp_driver/: CMakeLists.txt  agv_tcp_node.cpp  package.xml  ros_handle.cpp  server.cpp
robot_tcp_driver/include/: ros_handle.h  sever.h  tcp_define.h
ros-navigation-goals-cpp-python/src/: send_goal_cpp.cpp
sh/: mynteye.sh  navigation.sh  robot_core.sh  robot_core4.28.sh  robot_start.sh  save_aruco.sh  save_map.sh
turtlebot3/turtlebot3_bringup/launch/: turtlebot3_core.launch  turtlebot3_lidar.launch  turtlebot3_robot.launch
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.urdf.xacro
turtlebot3/turtlebot3_navigation/launch/: amcl.launch  move_base.launch  turtlebot3_navigation_lx.launch  turtlebot3_navigation_lx_autorun.sh
turtlebot3/turtlebot3_navigation/maps/: map.pgm  map.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map2231.pgm  map2231.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml  maplab497.pgm  maplab497.yaml
turtlebot3/turtlebot3_navigation/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  gloab_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_navigation_lx.rviz
turtlebot3/turtlebot3_slam/config/: turtlebot3_lds_2d (init_backup).lua  turtlebot3_lds_2d.lua
(+16 files in other folders)
